# eqx-mobilefacenet

./: Untitled.ipynb  inference.py  mobilefacenet.py  pyproject.toml
